Improve subnav experience
Allows navigating to subnav items even when navigation is collapsed.

--- a/packages/craftcms-sass/_mixins.scss
+++ b/packages/craftcms-sass/_mixins.scss
@@ -742,15 +742,28 @@ $menuBorderRadius: $mediumBorderRadius;
   width: var(--touch-target-size);
 }
 
+// https://tailwindcss.com/docs/screen-readers#undoing-screen-reader-only-elements
 @mixin visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
-  margin: 0;
+  margin: -1px;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
-  border: 0;
+  white-space: nowrap;
+  border-width: 0;
+}
+
+@mixin not-visually-hidden {
+  position: static;
+  width: auto;
+  height: auto;
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  clip: auto;
+  white-space: normal;
 }
 
 @mixin readable {
