--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -272,6 +272,10 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+
+  & > .container {
+    flex: 1;
+  }
 }
 
 #alerts {
