Get label out of the way
Same fix as ff7e2ee but for the system-name portion

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -179,6 +179,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
       border-radius: var(--medium-border-radius);
       padding: var(--xs) var(--s);
       white-space: nowrap;
+      pointer-events: none;
 
       @media screen and (prefers-reduced-motion: no-preference) {
         transition:
