--- a/src/templates/_layouts/components/global-sidebar.twig
+++ b/src/templates/_layouts/components/global-sidebar.twig
@@ -74,11 +74,12 @@
                             {{ _self.action(item) }}
 
                             {% if item.subnav %}
-                                {% set icon = item.sel ? 'angle-down' : 'angle-right' %}
-                                <div type="button" class="nav-item__indicator">
-                                    <span class="cp-icon">{{ iconSvg(icon) }}</span>
-                                </div>
-                                <ul class="nav-item__subnav">
+                                <craft-disclosure>
+                                  <button type="button" class="nav-item__trigger" aria-controls="{{ item.id }}-subnav" aria-expanded="{{ item.sel ?  'true' : 'false' }}">
+                                      <span class="cp-icon">{{ iconSvg('angle-down') }}</span>
+                                  </button>
+                                </craft-disclosure>
+                                <ul class="nav-item__subnav {{ item.sel ? 'is-open' : '' -}}" id="{{ item.id }}-subnav">
                                     {% for itemId, item in item.subnav %}
                                         {% set itemIsSelected = (
                                             (selectedSubnavItem is defined and selectedSubnavItem == itemId) or
