Adjust checkbox spacing a bit

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2652,7 +2652,7 @@ h2 + .actions {
     th,
     td {
       &:first-child {
-        @include padding-left(24px);
+        @include padding-left(var(--m));
       }
     }
   }
