--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -1047,17 +1047,34 @@ li.breadcrumb-toggle-wrapper {
   }
 }
 
+#footer,
+.footer {
+  padding: 6px var(--pane-padding, var(--xl));
+  min-height: 44px;
+  line-height: calc(32rem / 16);
+
+  .buttons {
+    height: 32px;
+    display: flex;
+    align-items: center;
+  }
+
+  .btn {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    height: var(--ui-control-height--small);
+  }
+}
+
 #footer {
   position: sticky;
   bottom: 0;
   z-index: 1;
   margin: calc(var(--xl) + 1px) calc(var(--padding) * -1 + 2px)
     calc(var(--xl) * -1 + 2px);
-  padding: 5px var(--padding);
   background-color: var(--gray-050);
   border-radius: var(--small-border-radius);
   box-sizing: border-box;
-  min-height: 44px;
 
   &:empty {
     display: none;
