--- a/src/web/assets/cp/src/css/_global-sidebar.scss
+++ b/src/web/assets/cp/src/css/_global-sidebar.scss
@@ -1,7 +1,8 @@
 .global-sidebar {
   --is-always-visible: true;
-  --prefix-size: 30px;
+  --prefix-width: calc(30rem / 16);
   --prefix-ratio: 1;
+  --gutter-width: calc(10rem / 16); // Left and right padding
 
   position: sticky;
   top: 0;
@@ -74,8 +75,11 @@
 }
 
 .nav-item {
+  --gutter-width: calc(10rem / 16);
   display: grid;
-  grid-template-columns: 10px 1fr var(--prefix-size) 10px;
+  grid-template-columns: var(--gutter-width) 1fr var(--prefix-width) var(
+      --gutter-width
+    );
   grid-template-areas: '. action trigger .' 'subnav subnav subnav subnav';
   align-items: center;
   width: 100%;
@@ -86,7 +90,9 @@
 
   [data-sidebar='collapsed'] & {
     grid-template-areas: '. action .' '. trigger .' 'subnav subnav subnav';
-    grid-template-columns: 10px var(--prefix-size) 10px;
+    grid-template-columns: var(--gutter-width) var(--prefix-width) var(
+        --gutter-width
+      );
   }
 }
 
@@ -149,7 +155,7 @@
 }
 
 .sidebar-actions {
-  padding: 10px; // match padding of #system-info
+  padding: 10px var(--gutter-width); // match padding of #system-info
 }
 
 .sidebar-action {
@@ -168,7 +174,7 @@
   &:before {
     content: '';
     position: absolute;
-    left: calc(10px * -1); // match #system-name
+    left: calc((10rem / 16) * -1); // match #system-name
     top: 50%;
     height: 80%;
     transform: translateY(-50%);
@@ -252,7 +258,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: var(--prefix-size);
+  width: var(--prefix-width);
   aspect-ratio: var(--prefix-ratio);
   line-height: 0;
   flex-shrink: 0;
@@ -283,7 +289,7 @@ States
 @media only screen and (min-width: $minFullUiWidth) {
   [data-sidebar='collapsed'] {
     .global-sidebar {
-      --global-sidebar-width: 50px;
+      --global-sidebar-width: calc(50rem / 16);
     }
 
     .nav-item__indicator {
@@ -291,8 +297,8 @@ States
     }
 
     .sidebar-action {
-      width: 30px;
-      min-height: 30px;
+      width: var(--prefix-width);
+      min-height: var(--prefix-width);
 
       &:focus-visible,
       &:hover {
@@ -351,7 +357,7 @@ States
     }
 
     .global-nav > ul > li + li {
-      --separator-width: 28px;
+      --separator-width: calc(28rem / 16);
 
       &:before {
         position: absolute;
