--- a/src/templates/graphql/schemas/_edit.twig
+++ b/src/templates/graphql/schemas/_edit.twig
@@ -85,7 +85,7 @@
 
     {% set schemaComponents = craft.app.gql.getAllSchemaComponents %}
 
-    {% for category, catPermissions in schemaComponents.queries %}
+    {% for category, catPermissions in schemaComponents.queries|filter %}
         <div class="user-permissions">
             <h3>{{ category }}</h3>
             <div class="select-all"></div>
@@ -97,7 +97,7 @@
     <hr/>
     <h2>{{ 'Choose the available mutations for this schema:'|t('app') }}</h2>
 
-    {% for category, catPermissions in schemaComponents.mutations %}
+    {% for category, catPermissions in schemaComponents.mutations|filter %}
         <div class="user-permissions">
             <h3>{{ category }}</h3>
             <div class="select-all"></div>
