only list view mode + sorting

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -6572,7 +6572,9 @@ $min2ColWidth: 400px;
 /* tag select fields */
 .tagselect {
   .elements {
-    display: inline;
+    li {
+      display: inline;
+    }
   }
 
   .chip.small {
