--- a/src/templates/_layouts/components/alerts.twig
+++ b/src/templates/_layouts/components/alerts.twig
@@ -22,6 +22,7 @@
             type: 'li',
             style: {
               'display': 'block',
+              'height': 'var(--header-height)'
             },
           } only %}
             {% block content %}
