Admin table styling & messaging fixes

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2652,8 +2652,16 @@ h2 + .actions {
   table.data {
     th,
     td {
-      &:first-child {
-        @include padding-left(var(--m));
+      &:first-child:not(.checkbox-cell) {
+        @include padding-left(
+          var(--pane-padding, var(--pane-x-padding-default))
+        );
+      }
+
+      &:last-child {
+        @include padding-right(
+          var(--pane-padding, var(--pane-x-padding-default))
+        );
       }
     }
   }
