--- a/src/templates/_elements/sources.twig
+++ b/src/templates/_elements/sources.twig
@@ -79,7 +79,7 @@
             data: {
                 notification: true,
             },
-            text: '{num, number} {num, plural, =1{notification} other{notifications}}'|t('app', {
+            text: source.badgeLabel ?? '{num, number} {num, plural, =1{notification} other{notifications}}'|t('app', {
                 num: source.badgeCount,
             }),
         }) }}
