Render crumb icons with iconSvg()
Fixes #14415

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -563,6 +563,10 @@ li.crumb {
 
     &:not(:hover) {
       color: var(--text-color);
+
+      svg {
+        @include svg-mask(var(--text-color));
+      }
     }
 
     &:hover {
