--- a/src/templates/_layouts/components/crumbs.twig
+++ b/src/templates/_layouts/components/crumbs.twig
@@ -28,10 +28,10 @@
                 href: crumb.url is defined ? url(crumb.url) : null,
               } %}
                 {% if crumb.icon is defined %}
-                  <span data-icon="{{ crumb.icon }}" aria-hidden="true"></span>
+                  <span class="cp-icon puny" aria-hidden="true">{{ iconSvg(crumb.icon) }}</span>
                 {% endif %}
 
-                {{ crumb.label ?? crumb.html|raw }}
+                <span>{{ crumb.label ?? crumb.html|raw }}</span>
               {% endtag %}
 
               {% if crumb.menu is defined and crumb.menu.items is defined %}
