--- a/src/templates/settings/entry-types/_edit.twig
+++ b/src/templates/settings/entry-types/_edit.twig
@@ -57,7 +57,7 @@
     label: "Show the Title field"|t('app'),
     name: 'hasTitleField',
     toggle: 'title-container',
-    reverseToggle: '#titleFormat-container, .fld-title-field-icon',
+    reverseToggle: '#titleFormat-container, #field-layout .fld-title-field-icon',
     on: entryType.hasTitleField
 }) }}
 
@@ -123,7 +123,7 @@
     label: "Show the Slug field"|t('app'),
     name: 'showSlugField',
     toggle: 'slug-container',
-    reverseToggle: '#slugFormat-container, .fld-slug-field-icon',
+    reverseToggle: '#slugFormat-container, #field-layout .fld-slug-field-icon',
     on: entryType.showSlugField
 }) }}
 
@@ -184,6 +184,7 @@
 <hr>
 
 {{ forms.fieldLayoutDesignerField({
+    id: 'field-layout',
     fieldLayout: entryType.getFieldLayout(),
 }) }}
 
